--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "lib/SteamAuth"]
 	path = lib/SteamAuth
-	url = git://github.com/entrailz/SteamAuth
+	url = https://github.com/entrailz/SteamAuth.git
